@@ -15,18 +15,13 @@
 // You should have received a copy of the GNU Lesser General Public License
 // along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
 
-
-/**
- * \brief Declaration of the IpoptSolver class.
- */
-
 #ifndef ROBOPTIM_CORE_IPOPT_HH
 # define ROBOPTIM_CORE_IPOPT_HH
 # include <coin/IpSmartPtr.hpp>
 # include <roboptim/core/solver.hh>
 # include <roboptim/core/twice-derivable-function.hh>
 
-/// Ipopt classes.
+/// \brief Ipopt classes.
 namespace Ipopt
 {
   class TNLP;
@@ -42,39 +37,48 @@ namespace roboptim
     class MyTNLP;
   };
 
-  /**
-     \addtogroup roboptim_problem
-     @{
-  */
+  /// \addtogroup roboptim_problem
+  /// @{
 
-  /// Ipopt based solver.
+  /// \brief Ipopt based solver.
+  ///
+  /// Instantiate this solver to solve problems with Ipopt.
+  ///
+  /// \warning Ipopt needs twice derivable functions, so be sure
+  /// to provide hessians in your function's problems.
   class IpoptSolver : public Solver<TwiceDerivableFunction,
                                     const TwiceDerivableFunction*>
   {
   public:
     friend class detail::MyTNLP;
-    typedef Solver<TwiceDerivableFunction, const TwiceDerivableFunction*> parent_t;
 
-    /// Constructor.
-    explicit IpoptSolver (const problem_t&) throw ();
-    /// Destructor.
+    /// \brief Parent type.
+    typedef Solver<TwiceDerivableFunction, const TwiceDerivableFunction*>
+    parent_t;
+
+    /// \brief Instantiate the solver from a problem.
+    ///
+    /// \param problem problem that will be solved
+    explicit IpoptSolver (const problem_t& problem) throw ();
+
     virtual ~IpoptSolver () throw ();
 
-    /// Solve the problem.
+    /// \brief Solve the problem.
     virtual void solve () throw ();
 
-    /// Get Ipopt Application object for Ipopt specific tuning.
+    /// \brief Get Ipopt Application object for Ipopt specific tuning.
+    ///
+    /// Consult Ipopt documentation for information regarding
+    /// IpoptApplication class.
     virtual Ipopt::SmartPtr<Ipopt::IpoptApplication> getIpoptApplication ()
       throw ();
   private:
-    /// Smart pointer to the Ipopt non linear problem description.
+    /// \brief Smart pointer to the Ipopt non linear problem description.
     Ipopt::SmartPtr<Ipopt::TNLP> nlp_;
-    /// Smtart pointer to the Ipopt application instance.
+    /// \brief Smart pointer to the Ipopt application instance.
     Ipopt::SmartPtr<Ipopt::IpoptApplication> app_;
   };
-  /**
-     @}
-  */
 
+  /// @}
 } // end of namespace roboptim
 #endif //! ROBOPTIM_CORE_IPOPT_HH
